--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,61 +1,2 @@
-about-time==3.1.1
-alive-progress==2.4.1
-annotated-types==0.7.0
-anyio==4.9.0
-argcomplete==3.6.2
-autoslot==2021.10.1
-beautifulsoup4==4.11.1
-beautifultable==1.1.0
-blinker==1.9.0
-certifi==2025.6.15
-click==8.2.1
-commonmark==0.9.1
-ensurepath==0.2.6
-exceptiongroup==1.3.0
-fastapi==0.115.13
-Flask==3.1.1
-flask-cors==6.0.1
-geographiclib==2.0
-geopy==2.3.0
 ghunt==2.2.0
-grapheme==0.6.0
-h11==0.14.0
-h2==4.2.0
-hpack==4.1.0
-httpcore==0.16.3
-httpx==0.23.1
-humanize==4.4.0
-hyperframe==6.1.0
-idna==3.10
-ImageHash==4.3.1
-inflection==0.5.1
-itsdangerous==2.2.0
-Jinja2==3.1.6
-jsonpickle==2.2.0
-MarkupSafe==3.0.2
-numpy==2.2.6
-packaging==23.0
-Pillow==9.3.0
-pipx==1.7.1
-platformdirs==4.3.8
-protobuf==4.21.9
-pydantic==2.11.7
-pydantic_core==2.33.2
-Pygments==2.19.2
-python-dateutil==2.8.2
-PyWavelets==1.8.0
-rfc3986==1.5.0
-rich==12.6.0
-rich-argparse==1.5.0
-scipy==1.15.3
-six==1.17.0
-sniffio==1.3.1
-soupsieve==2.7
-starlette==0.46.2
-tomli==2.2.1
-typing-inspection==0.4.1
-typing_extensions==4.14.0
-userpath==1.9.2
-uvicorn==0.34.3
-wcwidth==0.2.13
-Werkzeug==3.1.3
+sherlock-project==0.15.0
